feat(rating): implement rating service and logic